fix(ErrorNotification): set high z-index to show errors alongside modals
If a modal window and the ErrorNotification component are shown at the
same time, the error component will be in the back, it practically
won't be visible. To fix this problem, it's necessary to specify a
higher z-index for <ErrorNotification />.

--- a/client/src/components/UI/ErrorNotification/ErrorNotification.module.css
+++ b/client/src/components/UI/ErrorNotification/ErrorNotification.module.css
@@ -1,6 +1,7 @@
 .error-notification {
     max-width: 40%;
     position: absolute;
+    z-index: 1000;
     top: 50px;
     border-radius: 0 15px 0 0;
     background: white;
